// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "1d69b213d37eb5c0e59a0ec61f56d9931358464544855f4cfac22a3fcb283a77.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
  },
}
`;

exports[`onOverridden 1`] = `
Object {
  "Resources": Object {
    "ApprovalRuleTemplateRepositoryAssociationCustomResource78A24919": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "RepositoryName": Object {
          "Fn::GetAtt": Array [
            "Repository22E53BBD",
            "Name",
          ],
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ApprovalRuleTemplateRepositoryAssociation",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderHandler5B209F6B": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "1d69b213d37eb5c0e59a0ec61f56d9931358464544855f4cfac22a3fcb283a77.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateRepositoryAssociationCustomResourceProviderRoleD1B94887": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:AssociateApprovalRuleTemplateWithRepository",
                    "codecommit:DisassociateApprovalRuleTemplateFromRepository",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "repo",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryoverridden5BAF2C46": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestApprovalRuleOverridden",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicPolicyA1747468": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "TopicBFC7AF6E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
}
`;
